test/tests/stages/6_statements_and_conditional_expressions/valid/if_nested_5.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
                CIf: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  CExpression: 
                    CAssignment: 
                      None: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 3
                        None: 
                      None: 
                  CExpression: 
                    CAssignment: 
                      None: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 4
                        None: 
                      None: 
                CExpression: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
